added JQuery, AJAX

--- a/css/style.css
+++ b/css/style.css
@@ -292,10 +292,11 @@ h2 {
 .link_read_articles {
     margin-left: 20px;
 }
-.info {
+.author_block .info {
     padding: 5px 10px;
     margin-top: 10px;
     border: 1px solid lightgray;
+    display: block;
 }
 /*author_articles page*/
 #author_art {
@@ -357,14 +358,11 @@ aside a {
     color: #37245c;
 }
 aside a:hover {
-    color: deepskyblue;
-    -webkit-transition: all 0.2s ease-out;
-    -moz-transition: all 0.2s ease-out;
-    -o-transition: all 0.2s ease-out;
-    transition: all 0.2s ease-out;
-}
-aside a:focus {
-    color: deepskyblue;
+    color: deepskyblue !important;
+    -webkit-transition: all 0.2s ease-out !important;
+    -moz-transition: all 0.2s ease-out !important;
+    -o-transition: all 0.2s ease-out !important;
+    transition: all 0.2s ease-out !important;
 }
 aside li {
     padding-top: 10px;
@@ -373,8 +371,8 @@ aside li {
     /*color: yellow;*/
     color: #37245c;
     /*background: #37245c;*/
-    width:30px;
-    height:30px;
+    width: 30px;
+    height: 30px;
     text-align: center;
     border-radius: 50%;
     /*border: 2px solid black;*/
@@ -388,8 +386,26 @@ aside li {
 }
 .glyphicon-menu-right:hover, .glyphicon-menu-left:hover {
     color: yellow;
-    -webkit-transition: all 0.2s ease-out;
-    -moz-transition: all 0.2s ease-out;
-    -o-transition: all 0.2s ease-out;
-    transition: all 0.2s ease-out;
+    -webkit-transition: all 0.2s ease-out !important;
+    -moz-transition: all 0.2s ease-out !important;
+    -o-transition: all 0.2s ease-out !important;
+    transition: all 0.2s ease-out !important;
+}
+#main_wrapper {
+    width: 80%;
+    float: right;
+    margin: 0 auto;
+    margin-right: 30px;
+    margin-top: 30px;
+    -webkit-transition-duration: 0.3s;
+    -moz-transition-duration: 0.3s;
+    -o-transition-duration: 0.3s;
+    transition-duration: 0.3s;
+}
+.active {
+    color: deepskyblue;
+    -webkit-transition-duration: 0.3s;
+    -moz-transition-duration: 0.3s;
+    -o-transition-duration: 0.3s;
+    transition-duration: 0.3s;
 }
